# ultrabot_coding_robtic

./: Algoritmos Ultrabot.docx  README.md  Ultrabot Algorithms.docx
Navigation/: .gitignore  BUILD_GUIDE.md  CALIBRATION_GUIDE.md  CMakeLists.txt  OPS_VALIDATION_PLAN.md  PARAMETER_VALIDATION.md  README.md  SAFETY.md  SECURITY_SUMMARY.md  SROS2_GUIDE.md  SROS2_QUICK_REFERENCE.md  organize_package.sh  package.xml
Navigation/config/: .gitignore  certified_safety_params.yaml  maintenance_audit.yaml  object_segmentation.yaml  odometry_params.yaml  ouster_lidar.yaml  realsense_d455.yaml  robot_config.yaml  safety_params.yaml  sensor_visualization.rviz
Navigation/include/: certified_params_validator.hpp  cli_options.hpp  command_limiter.hpp  command_watchdog.hpp  drive_interface.hpp  ethercat_driver.hpp  maintenance_mode_manager.hpp  mock_driver.hpp  odometry_calculator.hpp  odometry_publisher.hpp  somanet_lifecycle_node.hpp
Navigation/launch/: launch.py  object_segmentation.launch.py  sensors.launch.py
Navigation/scripts/: generate_certification_hash.py  install_dependencies.sh  setup_sros2.ps1  setup_sros2.sh  teleop_keyboard.py  teleop_keyboard_safe.py  validate_odometry.py  verify_safety_integration.ps1  verify_safety_integration.sh  verify_velocity_limits.ps1
Navigation/src/: certified_params_validator.cpp  command_arbitrator_node.cpp  command_limiter.cpp  command_watchdog.cpp  ethercat_driver.cpp  main.cpp  maintenance_mode_manager.cpp  object_segmentation_node.cpp  odometry_calculator.cpp  odometry_publisher.cpp  safety_supervisor_node.cpp  somanet_lifecycle_node.cpp  teleop_joy.cpp
Navigation/test/: test_cli_options.cpp  test_drive_safety_utils.cpp  test_ethercat_failures.cpp  test_lifecycle_integration.cpp  test_mock_driver.cpp  test_odometry_calculator.cpp  test_safety_critical.cpp  test_somanet_lifecycle_node.cpp
docs/: ARCHITECTURE_OVERVIEW_EN.md  FRAMEWORKS.md  FRAMEWORKS_QUICK_REFERENCE.md  INSTALLATION_FRAMEWORKS.md  OPEN_SOURCE_RESOURCES.md  OPERATIONAL_READINESS.md  REMAINING_TASKS.md  ROADMAP.md  code_evaluation.md
requirements/: ros2_packages.txt
