<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>somanet</name>
  <version>3.1.0</version>
  <description>ROS2 package for safe AGV control with EtherCAT motor interface, ISO 13849-1 compliant</description>

  <maintainer email="ultrabot@example.com">Ultrabot Team</maintainer>

  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclpy</depend>
  <depend>ament_index_cpp</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>diagnostic_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>joy</depend>

  <!-- Sensor drivers (open-source) -->
  <exec_depend>realsense2_camera</exec_depend>
  <exec_depend>ouster_ros</exec_depend>
  <exec_depend>rviz2</exec_depend>
  
  <!-- Dependencies for certified parameter validation (ISO 13849-1 ยง5.2.2) -->
  <depend>libssl-dev</depend>
  <depend>libyaml-cpp-dev</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
